# tacbot

./: .gitignore  README.md  index.html  params.json
tacbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
tacbot_description/: CMakeLists.txt  README.md  model.config  package.xml
tacbot_description/launch/: display_gazebo.launch  display_rviz.launch
tacbot_description/urdf/: base.gazebo.xacro  base.xacro  kinect.xacro  materials.xacro  robot.xacro  robot_gazebo.xacro  utils.xacro  wheel.gazebo.xacro  wheel.xacro
tacbot_description/urdf/sensors/: hokuyo_lx30.gazebo.xacro  hokuyo_lx30.xacro  imu.gazebo.xacro  imu.xacro  kinect.gazebo.xacro  kinect.xacro
tacbot_launch/: CMakeLists.txt  LICENSE  package.xml
tacbot_launch/config/: diff_drive.yaml  ekf_rel_localization.yaml  laserscan_from_kinect_params.yaml  laserscan_kinect.rviz  laserscan_kinect_l_params.yaml  laserscan_kinect_params.yaml  laserscan_kinect_u_params.yaml  localization.rviz  navigation.rviz  velocity_filter.yaml  velocity_smoother.yaml
tacbot_launch/config/unused/: hokuyo_back.yaml  hokuyo_front.yaml  visual_odometry_params.yaml
tacbot_launch/launch/: drive_controller.launch  drivers_interface.launch  hardware_drivers.launch  imu_filter.launch  imu_orientus.launch  platform_with_sensors_carol.launch  relative_localization.launch  robot.launch  rviz.launch  sensors.launch  velocity_filter.launch
tacbot_launch/launch/unused/: back_hokuyo.launch  cmd_vel_mux.launch  gmapping.launch  hokuyo_eth_scanners.launch  laserscan_multi_merger.launch  machines.launch  map_server.launch  navigation.launch  navigation_slam.launch  platform.launch  robot_deployer.launch  visual_odometry.launch
tacbot_launch/nodes/: control_logic.py  laserscan_cutter.py
tacbot_navigation/: CMakeLists.txt  package.xml
tacbot_navigation/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap.yaml  global_costmap_params.yaml  global_planner.yaml  global_planner_params.yaml  gmapping_params.yaml  local_costmap.yaml  local_costmap_params.yaml  move_base.yaml  move_base_params.yaml
tacbot_navigation/launch/: gmapping.launch  move_base.launch  move_base_test.launch  navigation.launch  navigation_slam.launch  navigation_test.launch  navigation_two_maps.launch
tacbot_navigation/maps/: 209.pgm  209.yaml  flat2.pgm  flat2.yaml  k3.pgm  k3.yaml  k3_planner.yaml
tacbot_simulation/: CMakeLists.txt  README.md  package.xml
tacbot_simulation/env-hooks/: tacbot_sim.sh
tacbot_simulation/launch/: display_gazebo.launch  world1.launch
tacbot_simulation/launch/includes/: tacbot.launch.xml
tacbot_simulation/src/: gazebo_ros_tacbot.cpp  gazebo_ros_tacbot.h  gazebo_tacbot_imu.cpp  gazebo_tacbot_imu.h
tacbot_utils/: CMakeLists.txt  package.xml
tacbot_utils/launch/: gazebo_link_pose_with_tf.launch  rel_localization_gazebo_test.launch
tacbot_utils/scripts/: gazebo_link_pose_pub.py
