<package format="2">
  <name>tacbot</name>
  <version>1.0.1</version>
  <description>The multirobot_system metapackage.</description>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tacbot_description</exec_depend>
  <exec_depend>tacbot_simulation</exec_depend>
  <exec_depend>tacbot_launch</exec_depend>
  <exec_depend>tacbot_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
