<package format="2">
    <name>tacbot_navigation</name>
    <version>1.0.0</version>
    <description>
    Navigation configuration for mobile robot Tacbot.
    </description>
    <author>Michal Drwiega</author>
    <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
    <license>BSD</license>
    <url type="website">http://www.mdrwiega.com</url>

    <buildtool_depend>catkin</buildtool_depend>
</package>
